fix(headline): reduce headline header bottom spacing to 0.5rem

--- a/src/components/pages/homepage/dataset.module.scss
+++ b/src/components/pages/homepage/dataset.module.scss
@@ -33,6 +33,12 @@
       margin-left: 1.5rem;
       margin-right: 1.5rem;
     }
+    h3 {
+      margin-bottom: 0.5rem;
+    }
+    p {
+      margin-top: 0;
+    }
   }
   &.flip {
     @media (min-width: $viewport-lg) {
